--- a/CSS/style.css
+++ b/CSS/style.css
@@ -20,10 +20,8 @@
     clear: both;
 }
 .wrapper{
-    width: 80%;
-    height: 80%;
-    min-width: 1080px;
-    max-width: 1200px;
+    width: 1080px;
+    width: 1200px;
     margin: 5% auto;
     margin-top: 10px;
     text-align: center;
@@ -41,10 +39,9 @@ p{
     width: var(--section-size);
 }
 
-section{
+.section-setings{
     height: 120px;
-    width: 180px;
-    padding: 1%;
+    padding: 10px;
     margin:5px auto;
 }
 .img-size{
@@ -54,5 +51,10 @@ section{
 
 img{
     width: auto;
+    height: 100%;
+}
+.text-box-settings{
+    color: var(--color-names);
+    background-color: var(--color-section);
     height: 100%;
 }
